applied new transformation to the source file

--- a/conf/logstash/processor/forwarder_to_kafka.conf
+++ b/conf/logstash/processor/forwarder_to_kafka.conf
@@ -9,7 +9,7 @@ input {
 filter {
   csv {
     separator => ","
-    columns => ["timestamp","Date","Hour","Dept","Com","Address","Zip code","Corner","Segment","Address1","Address2","Vehicle 1 description","Vehicle 1","Vehicle 2 Description","Vehicle 2","Vehicle 3 Description","Vehicle 3","Person 1 Category","Person 1 Status","Person Tag","Person 2 Category","Person 2 Status","Person 2 Tag","Person 3 Cat","Person 3 Status","Person 3 Tag","Person 4 Cat","Person 4 Status","Person 4 Tag","fullAddress","latitude","longitude"]
+    columns => ["timestamp","Date","Hour","Dept","Com","Address","Zip code","Corner","Segment","Address1","Address2","Vehicle 1 description","Vehicle 1","Vehicle 2 Description","Vehicle 2","Vehicle 3 Description","Vehicle 3","Person 1 Category","Person 1 Status","Person Tag","Person 2 Category","Person 2 Status","Person 2 Tag","Person 3 Cat","Person 3 Status","Person 3 Tag","Person 4 Cat","Person 4 Status","Person 4 Tag","fullAddress","latitude","longitude","season","involvedCount","periodOfDay"]
   }
 
   if ([Corner] == "Corner") {
@@ -32,7 +32,7 @@ filter {
 output {  
   stdout { codec => rubydebug }
   kafka {
-    broker_list => "192.168.59.103:9092"
+    broker_list => "192.168.99.100:9092"
     topic_id => "accidents_in_paris"
   }
 }
