--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,37 @@
 ldap1:
   image: bahaaldine/docker-ldap
   volumes:
-    - "conf/ldap:/tmp/files"
+    - "./conf/ldap:/tmp/files"
   ports:
     - "389:389"
 
 zookeeper1:
   image: bahaaldine/docker-zookeeper
   volumes:
-    - "conf/kafka/server1:/etc/kafka"
-    - "logs/zookeeper1:/opt/kafka/logs/"
+    - "./conf/kafka/server1:/etc/kafka"
+    - "./logs/zookeeper1:/opt/kafka/logs/"
   ports:
     - "2181:2181"
   extra_hosts:
-    - "brokers:192.168.59.103"
+    - "brokers:192.168.99.100"
 
 kafka1:
   image: bahaaldine/docker-kafka
   volumes:
-    - "conf/kafka/server1:/etc/kafka"
-    - "logs/kafka1:/opt/kafka/logs/"
+    - "./conf/kafka/server1:/etc/kafka"
+    - "./logs/kafka1:/opt/kafka/logs/"
   extra_hosts:
-    - "brokers:192.168.59.103"
+    - "brokers:192.168.99.100"
   ports:
     - "9092:9092"
 
 kafka2:
   image: bahaaldine/docker-kafka
   volumes:
-    - "conf/kafka/server2:/etc/kafka"
-    - "logs/kafka2:/opt/kafka/logs/"
+    - "./conf/kafka/server2:/etc/kafka"
+    - "./logs/kafka2:/opt/kafka/logs/"
   extra_hosts:
-    - "brokers:192.168.59.103"
+    - "brokers:192.168.99.100"
   links:
     - "kafka1"
   ports:
@@ -40,9 +40,9 @@ kafka2:
 logstashProcessor1:
   image: bahaaldine/docker-logstash-agent
   volumes:
-    - "conf/logstash/processor:/etc/logstash"
-    - "conf/security:/etc/logstash/security"
-    - "logs/logstash-processor1:/var/log/logstash"
+    - "./conf/logstash/processor:/etc/logstash"
+    - "./conf/security:/etc/logstash/security"
+    - "./logs/logstash-processor1:/var/log/logstash"
   links:
     - kafka1
   ports:
@@ -53,39 +53,40 @@ elasticsearch1:
   ports:
     - "9200:9200"
   volumes:
-    - "logs/elasticsearch1:/var/log/elasticsearch"
-    - "conf/elasticsearch:/etc/elasticsearch"
+    - "./logs/elasticsearch1:/var/log/elasticsearch"
+    - "./conf/elasticsearch:/etc/elasticsearch"
+    - "./data:/data"
   links:
     - ldap1:ldap
   extra_hosts:
-    - "elasticsearch:192.168.59.103"
-    - "ldap:192.168.59.103"
+    - "elasticsearch:192.168.99.100"
+    - "ldap:192.168.99.100"
 logstashIndexer1:
   image: bahaaldine/docker-logstash-agent
   volumes:
-    - "conf/logstash/indexer:/etc/logstash"
-    - "logs/logstash-indexer1:/var/log/logstash"
+    - "./conf/logstash/indexer:/etc/logstash"
+    - "./logs/logstash-indexer1:/var/log/logstash"
   links:
     - elasticsearch1
   extra_hosts:
-    - "brokers:192.168.59.103"
-    - "elasticsearch:192.168.59.103"
+    - "brokers:192.168.99.100"
+    - "elasticsearch:192.168.99.100"
 
 logstashForwarder:
   image: bahaaldine/docker-logstash-forwarder
   volumes:
-    - "conf/logstash/forwarder:/etc/logstash-forwarder"
-    - "conf/security:/etc/logstash-forwarder/security"
-    - "logs/logstash-forwarder1:/tmp/logs/"
-    - "source:/tmp/source"
+    - "./conf/logstash/forwarder:/etc/logstash-forwarder"
+    - "./conf/security:/etc/logstash-forwarder/security"
+    - "./logs/logstash-forwarder1:/tmp/logs/"
+    - "./source:/tmp/source"
   extra_hosts:
-    - "processors:192.168.59.103"
+    - "processors:192.168.99.100"
 kibana1:
   image: bahaaldine/docker-kibana
   ports:
     - "5601:5601"
   volumes:
-    - "logs/kibana:/var/log/kibana"
-    - "conf/kibana:/opt/kibana/config"
+    - "./logs/kibana:/var/log/kibana"
+    - "./conf/kibana:/opt/kibana/config"
   extra_hosts:
-    - "elasticsearch:192.168.59.103"
+    - "elasticsearch:192.168.99.100"
