--- a/conf/elasticsearch/elasticsearch.yml
+++ b/conf/elasticsearch/elasticsearch.yml
@@ -422,3 +422,8 @@ marvel:
     exporter:
       es:
         hosts: [ "http://agent:amarvel@localhost:9200" ]
+
+http.cors.enabled : true
+http.cors.allow-origin : "*"
+http.cors.allow-methods : OPTIONS, HEAD, GET, POST, PUT, DELETE
+http.cors.allow-headers : X-Requested-With,X-Auth-Token,Content-Type, Content-Length, Authorization
