--- a/conf/elasticsearch/elasticsearch.yml
+++ b/conf/elasticsearch/elasticsearch.yml
@@ -147,6 +147,7 @@ index.number_of_replicas: 0
 # Path to directory where to store index data allocated for this node.
 #
 path.data: /data
+path.repo: ["/tmp/backup"]
 #
 # Can optionally include more than one location, causing data to be striped across
 # the locations (a la RAID 0) on a file level, favouring locations with most free
@@ -422,3 +423,8 @@ marvel:
     exporter:
       es:
         hosts: [ "http://agent:amarvel@localhost:9200" ]
+
+cloud:
+  aws:
+    access_key: AKIAJJYDY6NXEQLXSZRQ
+    secret_key: 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
