support for Elastic 2.0

--- a/v2.0/conf/logstash/indexer/kafka_to_elasticsearch.conf
+++ b/v2.0/conf/logstash/indexer/kafka_to_elasticsearch.conf
@@ -10,12 +10,12 @@ output {
   stdout { codec => rubydebug }
   elasticsearch {
     action => "index"
-    host => "elasticsearch"
-    cluster => "logging"
+    hosts => "elasticsearch:9200"
     index => "accidents-%{+YYYY}"
     workers => 1
-    protocol => "http"
     user => "bahaaldine"
     password => "bazarmi"
+    template => "/etc/logstash/templates/template.json"
+    template_overwrite => true
   }
 }
