--- a/v2.0/conf/logstash/processor/forwarder_to_kafka.conf
+++ b/v2.0/conf/logstash/processor/forwarder_to_kafka.conf
@@ -32,7 +32,7 @@ filter {
 output {  
   stdout { codec => rubydebug }
   kafka {
-    broker_list => "192.168.99.100:9092"
+    bootstrap_servers => "192.168.99.100:9092"
     topic_id => "accidents_in_paris"
   }
 }
