--- a/v2.0/conf/elasticsearch/shield/roles.yml
+++ b/v2.0/conf/elasticsearch/shield/roles.yml
@@ -3,19 +3,22 @@
 admin:
   cluster: all
   indices:
-    '*': all
+    '*':
+      privileges: all
 
 # monitoring cluster privileges
 # All operations on all indices
 power_user:
   cluster: monitor
   indices:
-    '*': all
+    '*':
+      privileges: all
 
 # Read-only operations on indices
 user:
   indices:
     '*': read
+      privileges: all
 
 # Defines the required permissions for transport clients
 transport_client:
@@ -33,16 +36,16 @@ kibana3:
 
 # The required permissions for kibana 4 users.
 kibana4:
-  cluster: 
+  cluster:
       - cluster:monitor/nodes/info
-      - cluster:monitor/health 
+      - cluster:monitor/health
   indices:
     '*':
       - indices:admin/mappings/fields/get
       - indices:admin/validate/query
       - indices:data/read/search
       - indices:data/read/msearch
-      - indices:admin/get 
+      - indices:admin/get
     '.kibana':
       - indices:admin/exists
       - indices:admin/mapping/put
@@ -64,6 +67,7 @@ kibana4_server:
       - cluster:monitor/health
   indices:
     '.kibana':
+      - indices:admin/create
       - indices:admin/exists
       - indices:admin/mapping/put
       - indices:admin/mappings/fields/get
