--- a/v2.0/images/elasticsearch/Dockerfile
+++ b/v2.0/images/elasticsearch/Dockerfile
@@ -12,14 +12,8 @@ ADD etc/supervisor/conf.d/elasticsearch.conf /etc/supervisor/conf.d/elasticsearc
 # Shield & Watcher & Marvel agent
 RUN /usr/share/elasticsearch/bin/plugin install license
 RUN /usr/share/elasticsearch/bin/plugin install watcher
+RUN /usr/share/elasticsearch/bin/plugin install shield
 RUN /usr/share/elasticsearch/bin/plugin install marvel-agent
-
-RUN chown -R elasticsearch:elasticsearch /var/run/elasticsearch/
-RUN chown -R elasticsearch:elasticsearch /usr/share/elasticsearch/data
-RUN chown -R elasticsearch:elasticsearch /var/log/elasticsearch
-RUN mkdir /tmp/elasticsearch
-RUN chown -R elasticsearch:elasticsearch /tmp/elasticsearch
-RUN chown -R elasticsearch:elasticsearch /etc/elasticsearch
 
 EXPOSE 9200
 EXPOSE 9300
